Ready before tram

--- a/manuscript_press.tex
+++ b/manuscript_press.tex
@@ -23,8 +23,8 @@
 
 Thank you for that kind introduction. 
 
-I am going to present dosimetric results in my presentation \emph{"Pre-dosing with lilotomab prior to therapy with 177Lu-lilotomab satetraxetan significantly increases the ratio of tumour to red marrow absorbed dose in non-Hodgkin lymphoma patients"}
-177Lu-lilotomab satetraxetan (commercially Betalutin®) is a novel antibody radionuclide conjugate targeting the CD37 antigen expressed on malignant B-cells. 
+I am going to present dosimetric results in my presentation titled \emph{"Pre-dosing with lilotomab prior to therapy with 177Lu-lilotomab satetraxetan significantly increases the ratio of tumour to red marrow absorbed dose in non-Hodgkin lymphoma patients"}
+177Lu-lilotomab satetraxetan (commercially called Betalutin®) is a novel antibody radionuclide conjugate targeting the CD37 antigen expressed on malignant B-cells. 
 177Lu-lilotomab satetraxetan is currently investigated in the multi-center phase 1/2 LYMRIT 37-01 study headed by Oslo University Hospital. Patients with relapsed indolent non-Hodgkin lymphoma are included.
 
 
@@ -44,22 +44,29 @@ Each arm is illustrated here as horizontal lines, it is a bit busy but if you fo
 Then predosing with either 40 mg of lilotomab, no pre-dosing, pre-dosing with another round of rituximab, and lastly 100 mg lilotomab per square meter body surface area of lilotomab.
 At time zero, all patients got administered 177Lu-lilotomab satetraxetan.
 
-Then follows a series of SPEC/CT-scans, from which we calculated the tumour and red marrow absorbed doses.
+Then followed a series of SPECT/CT-scans, from which we calculated the tumour and red marrow absorbed doses.
+
+In previous investigations of arm 1 and 2, we found a significantly lower red marrow dose in arm 2 compared to arm 1.
+The aim of our study was to investigate how the pre-dosing with lilotomab changed the uptake in the red marrow and tumors across all four arms.
 
 \subsection*{SPECT/CT}
 
 Here we see sagital images of one patient from each arm, four days post injection.
 The patients received the same amount of activity per kilogram body mass
-A reduction in red marrow uptake can be observed for patients in arm 1 and 4 compared to patients that did not receive pre-dosing with lilotomab (arm 2+3).
+If we observe the spine, a reduction in red marrow uptake can be observed for patients in arm 1 and 4 compared to patients that did not receive pre-dosing with lilotomab (arm 2+3).
 %The patients received the same amount of activity per kilogram body mass.
 %We used the lumbar vertebraes L2 to L4 to calculate the dose to the red marrow.
 
 \subsection*{Methods}
 
-We started with SPECT/CT-images that we used to create time activity curves.
-For the red marrow we meassured the activity concentration in lumbar L2 to L4, and corrected for tabulated values of trabecular bone.
-After calculating the time activity coeffients we used OLINDA/EXM to calculate the dose to tumours and red marrow.
-So, in this presentation we present the tumour doses, the red marrow doses and the ratio between them.
+For the dosimetry, we used an image based approach.
+We started with scatter and attenuation corrected SPECT/CT-images that we calibrated to use for activity quantification.
+For the red marrow we meassured the activity concentration in lumbar vertebrae L2, L3 and L4, as these are marrow rich bone sites with a simple geometry.
+The volumes of the bone sites were corrected for trabecular bone using tabulated values.
+Tumour volumes of interest were drawn in a slice by slice manner together with a nuclear medicine specialist.
+Activity at different time points were fitted to time activity curves and integrated.
+After calculating the time integrated activity coeffients we used OLINDA/EXM to calculate the dose to tumours and red marrow, using the OLINDA sphere model for the tumour and a mean S-value for marrow to marrow and remainder of body to marrow contribution.
+So, in this presentation we present the tumour doses, the red marrow doses and the ratio of the patient mean tumour dose and red marrow dose.
 
 \subsection*{Results}
 
@@ -72,11 +79,13 @@ So, in this presentation we present the tumour doses, the red marrow doses and t
 
 
 For the dosimetric analyses, arms 2 and 3 were combined in a single group since neither arms had received pre-dosing with lilotomab.
-On the left we see the red marrow for the three patient groups
-We observed a significantly lower red marrow absorbed dose for patients that had received lilotomab as pre-dosing. However, the difference between arm 1 and 4, the groups with different amount of lilotomab, was not significant.
+On the left we see the red marrow absorbed dose for the three patient groups, lilotomab-minus and arm 1 and 4.
+We found a significantly lower red marrow absorbed dose for patients that had received lilotomab as pre-dosing. However, the difference between arm 1 and 4, the groups with different amount of lilotomab, was not significant.
 On the right we see the tumour doses grouped likewise.
-The tumour absorbed doses varied substantially, and the mean dose was not significantly different between the groups 
+The tumour absorbed doses varied substantially both inter and intra-patiently, and the mean dose was not significantly different between the groups 
+Here we see the tumour doses divided by the red marrow absorbed dose.
 The ratio of tumour to red marrow absorbed dose was significantly higher in both arm 1 and arm 4 compared to the group that did not receive unlabelled lilotomab.
+The mean ratio doubled for arm 1 compared to lilotomab minus, and doubled again for arm 4.
 
 
 \subsection*{Summary}
